# Tobigs_VO

./: .gitignore  DOF6_2.py  DOF6_2_Colab_debugging.ipynb  Dataloader_loss.py  README.md  config.py  data_helper.py  generate_data.py  helper.py  main.py  main_2.py  main_f.py  main_f_r.py  main_none.py  main_r.py  model.py  model_2.py  model_bilstm.py  model_cell.py  model_unilstm.py  params.py  params_f.py  params_f_r.py  params_fr.py  params_none.py  params_r.py  preprocess.py  test.py  tobi_util.py  visualize.py
data_gen/: DOF6.py  DOF6_2.py  data_helper.py  helper.py  main.py  main_tovi.py  params.py  preprocess.py  test.ipynb
log/: events.out.tfevents.1592887269.kth-17UD70N-PX76K.4600.0  events.out.tfevents.1592887338.kth-17UD70N-PX76K.4632.0  events.out.tfevents.1592887760.kth-17UD70N-PX76K.4692.0  events.out.tfevents.1592888055.kth-17UD70N-PX76K.4742.0  events.out.tfevents.1592888131.kth-17UD70N-PX76K.4786.0  events.out.tfevents.1592888260.kth-17UD70N-PX76K.4822.0  (+108 more)
vo/: CMakeLists.txt  package.xml  setup.py
vo/launch/: save_im.launch
vo/scripts/save_data/: save_data.py
vo/scripts/vo/: DOF6_1.py  data_helper.py  helper.py  main.py  main_tovi.py  params.py  preprocess.py
vo/scripts/vo/KITTI/: 90OlHg6KWBzG6gR
vo/scripts/vo/KITTI/pose_GT/: 00.npy  00_tovis.npy  01.npy  01_tovis.npy  02.npy  02_tovis.npy  03.npy  03_tovis.npy  04_tovis.npy  05.npy  05_tovis.npy  06.npy  06_tovis.npy  07.npy  07_tovis.npy  08.npy  08_tovis.npy  09.npy  09_tovis.npy  10.npy  10_tovis.npy
vo/scripts/vo/datainfo/: valid_df_t000102050809_v04060710_pNone_seq5x7_sample3.pickle
(+5 files in other folders)
